Correct overflow-y to auto

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -104,7 +104,7 @@ main {
   max-height: 50vh;
   width: 60%;
   border: 4px solid var(--font-main);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .quotes-container {
